--- a/public/styles.css
+++ b/public/styles.css
@@ -22,15 +22,32 @@ body {
 }
 
 body .header {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    width: 95vw;
+    margin: 2.5vw;
+    height: 100vh;
+    background-image: linear-gradient(to left bottom, rgba(0, 255, 255, 0.8), rgba(112, 255, 221, 0.4));
+    clip-path: polygon(0% 0%, 100% 0%, 100% 70%, 100% 100%, 0% 70%);
+    /* clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 50% 100%, 0% 50%); */
 }
 
 .header > h1 {
     width: calc(80vw);
     text-align: center;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: orange;
+    font-weight: 900;
+    font-size: 4.5rem;
+    background-color: rgba(167, 255, 245, 0.4);
+    border-radius: 35%;
+    box-shadow: 1rem 2rem 4rem aqua;
 }
 
 .header > .navigation {
@@ -55,6 +72,10 @@ body .header {
 
 .header > .navigation > ul > li > a {
     color: orange;
+}
+
+.header > .navigation > ul > li > a:link {
+    text-decoration: none;
 }
 
 body .main-content {
